style(last checkout step): fixed big layout problem with bottom bar
The bottom bar was occupying more space than it should because it did not have a proper max-width.

--- a/projects/web/src/app/features/ecommerce/checkout/pages/checkout-step-order-review/checkout-step-order-review.component.scss
+++ b/projects/web/src/app/features/ecommerce/checkout/pages/checkout-step-order-review/checkout-step-order-review.component.scss
@@ -10,8 +10,10 @@
 // Pay Now Container
 .pay-now-container {
     position: fixed;
-    width: 100%;
     bottom: 0;
+    width: 100%;
+    max-width: var(--ancho-contenedor-solo-movil);
+    z-index: 2;
 
     border-top: 1px solid var(--N200);
     box-shadow: 0px -4px 4px 0px rgba(0, 0, 0, 0.05);
